# synapse_project

./: LICENSE  NB.jsonl  README.md  pyproject.toml
src/synapse_ai_nuralnexus/: framework.py
tests/: test_framework.py
